package com.openframe.core.model;

/**
 * Enumeration representing the status of an {@link IntegratedToolAgent}.
 */
public enum ToolAgentStatus {
    ENABLED,
    DISABLED
}
